# screen-recorder

./: .gitignore  BUILD_NOTES.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.bat  design-notes.md  main.cpp  netlify.toml  plan.md  test_results.xml  tmp_ram.ps1  tmp_sysinfo.ps1
.agent/rules/: specify-rules.md
.github/workflows/: fedora-linux-ci.yml  windows-ci.yml
.specify/memory/: constitution.md
_CPack_Packages/win64/ZIP/ScreenRecorder-0.2.2-windows-x64/: README.md
docs/: index.html  site.js  styles.css
docs/modules/: github-api.js  simulator.js
docs/styles/: base.css  cards.css  footer.css  header.css  hero.css  responsive.css  simulator.css
fedora-app/: README.md  io.github.screenrecorder.Fedora.desktop  io.github.screenrecorder.Fedora.metainfo.xml
fedora-linux-app/: CMakeLists.txt  README.md  install-rpm.sh  install.sh  io.github.screenrecorder.Fedora.desktop  io.github.screenrecorder.Fedora.metainfo.xml  verify-intel-va.sh  verify-local.sh  verify-ui-runtime.sh
fedora-linux-app/packaging/: build-rpm.sh  fedora-screen-recorder.spec
fedora-linux-app/src/: camera_devices.h  camera_preview_policy.h  encoder_policy.h  main.cpp  profile_policy.h  recording_clock.h  recording_faults.h  recovery_actions.h  telemetry.h
fedora-linux-app/tests/: camera_devices_test.cpp  camera_preview_policy_test.cpp  encoder_policy_test.cpp  profile_policy_test.cpp  recording_clock_test.cpp  recording_faults_test.cpp  recovery_actions_test.cpp  telemetry_test.cpp
specs copy/001-screen-recorder/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-screen-recorder/: data-model.md  tasks.md
specs/001-screen-recorder/checklists/: requirements.md
src/app/: app_icon.h  app_settings.h  app_version.h  camera_overlay.cpp  camera_overlay.h  main.cpp  recovery_actions.h  settings_dialog.cpp  settings_dialog.h  stop_flow.h  telemetry.h  ui_theme.h
src/audio/: audio_engine.cpp  audio_engine.h  audio_mixer.h  audio_resampler.h
src/capture/: capture_engine.cpp  capture_engine.h
src/controller/: session_controller.cpp  session_controller.h  session_machine.h
src/encoder/: encoder_probe.cpp  encoder_probe.h  power_mode.h  video_encoder.cpp  video_encoder.h
src/storage/: mux_writer.cpp  mux_writer.h  storage_manager.h
src/sync/: frame_pacer.h  sync_manager.h
src/utils/: bounded_queue.h  logging.h  qpc_clock.h  render_frame.h  session_diagnostics.cpp  session_diagnostics.h  thread_owner.h
tests/: CMakeLists.txt
tests/integration/: memory_sampler.cpp  stability_harness.cpp
tests/unit/: test_app_icon.cpp  test_app_settings.cpp  test_app_version.cpp  test_bounded_queue.cpp  test_fault_tolerance.cpp  test_mux_writer.cpp  test_phase8.cpp  test_phase9.cpp  test_qpc_clock.cpp  test_recovery_actions.cpp  test_session_diagnostics.cpp  test_session_machine.cpp  test_stop_flow.cpp  test_storage_manager.cpp  test_sync_manager.cpp  test_ui_theme.cpp
